--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,43 +52,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# linear model\n",
     "\n",
-    "model_linear = SVC(kernel='linear')\n",
+    "model_linear = SVC(kernel='sigmoid')\n",
     "model_linear.fit(X_train, y_train)\n",
     "\n",
     "# predict\n",
-    "y_pred = model_linear.predict(X_test)"
+    "y_pred = model_linear.predict(X_test)\n",
+    "model_linear.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy: 0.9103333333333333 \n",
-      "\n",
-      "[[1719    0   10    5    3   16   12    1    6    0]\n",
-      " [   1 1951   11    5    5    4    0    3   11    1]\n",
-      " [  11   26 1676   30   23    5   23   19   17    1]\n",
-      " [  10    4   47 1627    4   66    5   19   42   10]\n",
-      " [   4    8   21    1 1658    5   14    6    5   50]\n",
-      " [  21    9   19   87   12 1423   30    1   39   11]\n",
-      " [  20    7   23    1   14   20 1666    2    4    0]\n",
-      " [   7   13   19   16   31    4    2 1774    5   93]\n",
-      " [  25   44   49   54   12   58   18   11 1436   17]\n",
-      " [   4   11   19   23   90    9    1   69   20 1456]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import metrics\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -110,25 +92,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 785 into shape (28,28)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-61cc578cb4d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m255.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0msome_digit_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msome_digit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 785 into shape (28,28)"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import validation_curve\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_data = pd.read_csv('mnist_train.csv')\n",
     "test_data = pd.read_csv('mnist_test.csv')\n",
     "train_data.isnull().sum().head(10)\n",
@@ -138,7 +129,63 @@
     "## Dropping the variable 'label' from X variable \n",
     "X = train_data.drop(columns = 'label')\n",
     "X = X/255.0\n",
-    "test_data = test_data/255.0\n"
+    "test_data = test_data/255.0\n",
+    "\n",
+    "from sklearn.preprocessing import scale\n",
+    "X_scaled = scale(X)\n",
+    "\n",
+    "# train test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size = 0.3, train_size = 0.2 ,random_state = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# linear model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "clf = LogisticRegression(tol = 1,max_iter=5000)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# predict\n",
+    "y_pred = clf.predict(X_test)\n",
+    "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.8820555555555556 \n",
+      "\n",
+      "[[1647    0    8   12    6   39   28    9   19    4]\n",
+      " [   2 1911   16    7    3   18    3    7   23    2]\n",
+      " [  13   38 1582   44   22   15   46   27   37    7]\n",
+      " [  10   11   54 1550    5   90   14   31   52   17]\n",
+      " [   4   12   28    5 1557    8   37   20   23   78]\n",
+      " [  29    6   25   76   16 1364   41   16   60   19]\n",
+      " [  16    8   39    5   19   23 1629    4   13    1]\n",
+      " [   9   16   15   24   22    3    2 1761   10  102]\n",
+      " [  24   33   68   66   12   70   24    9 1403   15]\n",
+      " [   4   11    7   26   61   19    3   68   30 1473]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "# accuracy\n",
+    "print(\"accuracy:\", metrics.accuracy_score(y_true=y_test, y_pred=y_pred), \"\\n\")\n",
+    "\n",
+    "# cm\n",
+    "print(metrics.confusion_matrix(y_true=y_test, y_pred=y_pred))"
    ]
   },
   {
@@ -199,6 +246,46 @@
    "outputs": [],
    "source": [
     "# Model 4 (Decision Tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8633333333333333"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "%matplotlib notebook\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "data = pd.read_csv('mnist_train.csv')\n",
+    "L = np.sqrt(784)\n",
+    "X = data.iloc[:, 1:]\n",
+    "y = data['label']\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "rfc = DecisionTreeClassifier(random_state=0)\n",
+    "\n",
+    "rfc.fit(X_train, y_train)\n",
+    "\n",
+    "rfc.score(X_test, y_test)"
    ]
   },
   {
