--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9010555555555556"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# linear model\n",
     "\n",
@@ -68,9 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.9010555555555556 \n",
+      "\n",
+      "[[1695    0   19    4    4   26    9    1   12    2]\n",
+      " [   1 1940   15    8    3    8    0    2   11    4]\n",
+      " [  23   19 1593   26   26    6   84   12   34    8]\n",
+      " [   8    4   56 1603    5   86    6   26   30   10]\n",
+      " [   4    7   33    2 1623    6   13   10    3   71]\n",
+      " [  16   21   22   62   15 1424   29    4   36   23]\n",
+      " [  19   11   41    0   20   26 1633    0    7    0]\n",
+      " [   7   20   25   25   22    2    4 1749    5  105]\n",
+      " [  20   49   43   38    8   57   14    8 1473   14]\n",
+      " [   7    8   23   23   71    9    0   64   11 1486]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import metrics\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -199,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9443333333333334"
+       "0.9189444444444445"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,15 +248,25 @@
     "import numpy as np\n",
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "data = pd.read_csv('mnist_train.csv')\n",
-    "L = np.sqrt(784)\n",
-    "X = data.iloc[:, 1:]\n",
-    "y = data['label']\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "train_data = pd.read_csv('mnist_train.csv')\n",
+    "test_data = pd.read_csv('mnist_test.csv')\n",
+    "train_data.isnull().sum().head(10)\n",
+    "round(train_data.drop('label', axis=1).mean(), 2)\n",
+    "y = train_data['label']\n",
+    "\n",
+    "## Dropping the variable 'label' from X variable \n",
+    "X = train_data.drop(columns = 'label')\n",
+    "X = X/255.0\n",
+    "test_data = test_data/255.0\n",
+    "\n",
+    "from sklearn.preprocessing import scale\n",
+    "X_scaled = scale(X)\n",
+    "\n",
+    "# train test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size = 0.3, train_size = 0.2 ,random_state = 10)\n",
+    "\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -250,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8633333333333333"
+       "0.8182222222222222"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,15 +309,24 @@
     "import numpy as np\n",
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "data = pd.read_csv('mnist_train.csv')\n",
-    "L = np.sqrt(784)\n",
-    "X = data.iloc[:, 1:]\n",
-    "y = data['label']\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "train_data = pd.read_csv('mnist_train.csv')\n",
+    "test_data = pd.read_csv('mnist_test.csv')\n",
+    "train_data.isnull().sum().head(10)\n",
+    "round(train_data.drop('label', axis=1).mean(), 2)\n",
+    "y = train_data['label']\n",
+    "\n",
+    "## Dropping the variable 'label' from X variable \n",
+    "X = train_data.drop(columns = 'label')\n",
+    "X = X/255.0\n",
+    "test_data = test_data/255.0\n",
+    "\n",
+    "from sklearn.preprocessing import scale\n",
+    "X_scaled = scale(X)\n",
+    "\n",
+    "# train test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size = 0.3, train_size = 0.2 ,random_state = 10)\n",
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
